src/snapshots/cuda_test__compiler__test__load_mul_store_f32.snap
---
source: src/compiler.rs
expression: compiler.asm
---
.version 8.0
.target sm_86
.address_size 64

.entry cujit(
	.param .align 8 .b8 params[16]) {

	.reg.b8   %b <7>; .reg.b16 %w<7>; .reg.b32 %r<7>;
	.reg.b64  %rd<7>; .reg.f32 %f<7>; .reg.f64 %d<7>;
	.reg.pred %p <7>;

	mov.u32 %r0, %ctaid.x;
	mov.u32 %r1, %ntid.x;
	mov.u32 %r2, %tid.x;
	mad.lo.u32 %r0, %r0, %r1, %r2; // r0 <- Index

	// Index Conditional (jump to done if Index >= Size).
	ld.param.u32 %r2, [params]; // r2 <- params[0] (Size)
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r0 >= r2
	@%p0 bra done; // if p0 => done
	
	mov.u32 %r3, %nctaid.x; // r3 <- nctaid.x
	mul.lo.u32 %r1, %r3, %r1; // r1 <- r3 * r1
	
body: // sm_86

	// [0]: Var { op: Load(ParamId(1)), ty: F32, reg: 4 } =>
	ld.param.u64 %rd0, [params+8];
	mad.wide.u32 %rd0, %r0, 4, %rd0;
	ld.global.cs.f32 %f4, [%rd0];

	// [1]: Var { op: Mul(VarId(0), VarId(0)), ty: F32, reg: 5 } =>
	mul.ftz.f32 %f5, %f4, %f4;

	// [2]: Var { op: Store(VarId(1), ParamId(1)), ty: F32, reg: 6 } =>
	ld.param.u64 %rd0, [params + 8]; // rd0 <- params[offset]
	mad.wide.u32 %rd0, %r0, 4, %rd0; // rd0 <- Index * ty.size() + params[offset]
	st.global.cs.f32 [%rd0], %f5; // (Index * ty.size() + params[offset])[Index] <- var

	//End of Kernel:
	add.u32 %r0, %r0, %r1; // r0 <- r0 + r1
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r1 >= r2
	@!%p0 bra body; // if p0 => body


done:

	ret;
}

